buttons reload works

--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
 
 
 <div class="wrapper">
+<div id="bacon">
+    <p id="categoryName"></p>
+
+</div>
     <div id="buttons">
     </div>
-    <p id="categoryName"></p>
     <div id="hold">
     </div>
      <canvas id="stickman"></canvas>
