--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Hangman Game</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-
+<link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
 </head>
 <body>
    <div class="wrapper">
@@ -28,7 +28,7 @@
     <p id="categoryName"></p>
 
 </div>
-    <p>use the alphabet below to guess the word, or click hint to get a clue. </p>
+    <p>use the alphabet below to guess the word or get a clue. </p>
     <div id="buttons">
     </div>
     <div id="hold">
@@ -37,8 +37,8 @@
     <p id="mylives"></p>
     <p id="clue">Clue -</p>
     <div class="container">
-      <button id="hint">Hint</button>
-      <button id="reset">Play again</button>
+      <button id="hint">Get Clue</button>
+      <button id="reset">Play Again</button>
     </div>
 </div>
 
